<resources>
    <string name="app_name">SaveWisely</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать !"</string>
    <string name="invalid_username">Неверное имя пользователя</string>
    <string name="invalid_password">Пароль должен быть больше 5 символов</string>
    <string name="login_failed">"Ошибка авторизации!"</string>
    <string name="hello_blank_fragment">blank fragment</string>
    <string name="webclientid">160280168650-ultrgq8j8bdnk3ngei00t871fuknv89i.apps.googleusercontent.com</string>
    <string name="orTv">или</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="googleSignInBtn">Войти через Google</string>
    <string name="textLogin">Еще не зарегистрированы?</string>
    <string name="password">Введите пароль</string>
    <string name="email">Почта</string>
    <string name="loginText">Вход</string>
    <string name="signupText">Регистрация</string>
    <string name="passwordRetype">Повторите пароль</string>
    <string name="signupBtn">Зарегистрироваться</string>
    <string name="signupHave">Уже есть аккаунт?</string>
    <string name="haveAccount">Войти</string>
    <string name="createAccount">Регистрация</string>
    <string name="title">Заголовок</string>
    <string name="amount">Сумма</string>
    <string name="category">Категория</string>
    <string name="today">Сегодня</string>
    <string name="note">Комментарий</string>
    <string name="expense">Расход</string>
    <string name="income">Приход</string>
    <string name="transaction">Новая\nтранзакция</string>
    <string name="save">Сохранить</string>
    <string name="transaction_details">Детали\nтранзакции</string>
    <string name="transaction_information">Информация о транзакции</string>
    <string name="noteTransaction">Примечание: </string>
    <string name="notes">Это предложение служит примером…</string>
    <string name="transactionDD">01 января 2023</string>
    <string name="amount2">Сумма:</string>
    <string name="expense_transaction">Транзакция</string>
    <string name="account_name">Иван Иванов</string>
    <string name="accountEmail">ivanivanov@mail.ru</string>
    <string name="transaction_alltime">За все время операций</string>
    <string name="account_sum">Всего</string>
    <string name="accountExpense">Расход</string>
    <string name="accountIncome">Приход</string>
    <string name="reportEI">Диаграмма приходов-расходов</string>
    <string name="ratio">Соотношение</string>
    <string name="chartDate">Выбрать дату</string>
    <string name="submit">Отправить</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="forgot_pass_text">Чтобы сбросить пароль, введите адрес, с помощью которого вы входите в свой аккаунт. Это может быть адрес Gmail или другой электронной почты.</string>
    <string name="export_to_excel">Экспорт в формат Excel</string>
    <string name="export_text">Выберите диапазон времени для экспорта данных</string>
    <string name="export">Экспорт</string>
    <string name="main_sort">Выберите тип или время транзакции,\nЧтобы отсортировать список</string>
    <string name="main_greetings">Добро пожаловать</string>
    <string name="update">Обновить</string>
    <string name="chartcat">По категориям</string>
    <string name="update_name">Введите новое имя</string>
</resources>