<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionDetails"
    android:background="@color/blue_primary">


    <RelativeLayout
        android:id="@+id/transactionDetailsTitle"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/bg_details_expense">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="14dp"
                android:background="@drawable/ic_clear" />

            <ImageButton
                android:id="@+id/deleteData"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_delete" />

            <ImageButton
                android:id="@+id/updateData"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_edit" />

        </Toolbar>

        <TextView
            android:id="@+id/titleDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/transaction_details"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/transactionDetailsTitle"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:paddingTop="80dp">

        <TextView
            android:id="@+id/titleInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/transaction_information"
            android:textColor="#606060"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitleDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleInformation"
            android:layout_marginTop="19dp"
            android:drawablePadding="25dp"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center_vertical"
            android:text="@string/title"
            android:textColor="#606060"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_title_36" />

        <TextView
            android:id="@+id/tvCategoryDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitleDetails"
            android:layout_marginTop="30dp"
            android:drawablePadding="25dp"
            android:gravity="center_vertical"
            android:text="@string/category"
            android:textColor="#606060"
            android:textSize="20sp"
            android:fontFamily="@font/poppinsmedium"
            app:drawableStartCompat="@drawable/ic_format_list_36" />

        <TextView
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCategoryDetails"
            android:layout_marginTop="30dp"
            android:drawablePadding="25dp"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center_vertical"
            android:text="@string/noteTransaction"
            android:textColor="#606060"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_notes" />

        <TextView
            android:id="@+id/tvNoteDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/noteTitle"
            android:layout_marginLeft="59dp"
            android:drawablePadding="25dp"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center_vertical"
            android:text="@string/notes"
            android:textColor="#939393"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/information"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/bg_rounded_amount"
        android:elevation="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_calc_note" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/transactionDateDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center_vertical"
                android:text="@string/transactionDD"
                android:textColor="#606060"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTypeDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transactionDateDetails"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="start"
                android:text="@string/expense_transaction"
                android:textColor="#474747"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/amountTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTypeDetails"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/amount2"
                android:textColor="#979797"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvAmountDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/amountTitle"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="start"
                android:text="99999.99"
                android:textColor="#515151"
                android:textSize="22sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>