<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="340dp"
                android:layout_height="240dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:src="@drawable/logo">

            </ImageView>

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginStart="36dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/poppinsbold"
                android:gravity="left"
                android:text="@string/loginText"
                android:textColor="#37474f"
                android:textSize="28sp"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginText"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="36dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:drawablePadding="12dp"
                    android:src="@drawable/ic_email"
                    app:tint="@color/darker_gray" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="#787878"
                    app:backgroundTint="#21000000" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/passLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLayout"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="36dp"
                android:paddingEnd="7dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_lock_open" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="17sp"
/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passLayout"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="16sp"
                android:text="@string/forgot_password"
                android:textColor="@color/blue_darker"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/forgotPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/poppinsmedium"
                android:paddingTop="7dp"
                android:text="@string/action_sign_in_short"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/blue_darker"
                app:cornerRadius="13dp" />

            <TextView
                android:id="@+id/orTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginBtn"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:text="@string/orTv"
                android:textSize="16sp"
                android:textColor="#A1A1A1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/googleSignInBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/orTv"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="36dp"
                android:backgroundTint="#08000000"
                android:paddingTop="5dp"
                android:stateListAnimator="@null"
                android:text="@string/googleSignInBtn"
                android:textAllCaps="false"
                android:textColor="#606060"
                android:textSize="15sp"
                app:cornerRadius="13dp"
                app:icon="@drawable/googleg_standard_color_18"
                app:iconPadding="10dp"
                app:iconTint="#00100D0D"
                app:iconTintMode="src_atop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/googleSignInBtn"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/textLogin"
                    android:textSize="15sp"
                    android:textColor="#777777" />

                <TextView
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/createAccount"
                    android:textColor="@color/blue_primary"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>